# dolomedes

./: .gitignore  Cargo.toml  README.md  TODO.md  outline.md  protocol.md
docs/: protocol.txt  protocol_notes.md  protocol_spec.md  roadmap.md
src/: client.rs  kadem.rs  main.rs  messages.rs  pow.rs  proto.rs  terminal.rs
src/client/: cli.rs  fileshare.rs  messages.rs  mod.rs  proto.rs  request.rs  response.rs  routing.rs
