[package]
name = "dolomedes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
borsh = { version = "1.6.1", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
crypto-bigint = { version = "0.7.3", features = ["serde"] }
deterministic_rand = "0.7.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
sha2 = "0.10.9"
smallvec = "1.15.1"
tracing = "0.1.44"
